# Scaling-palm-tree

./: .gitignore  README.md  explore_phrases.py  pyproject.toml  reset_frustration.py
.kiro/specs/conversation-analysis-system/: .config.kiro  design.md  requirements.md  tasks.md
cas/: __main__.py  aggregator.py  cli.py  ingestion.py  models.py  reporter.py  storage.py
cas/analyzers/: __init__.py  dropoff.py  keyword_extractor.py  products.py  quality.py  segmentation.py
templates/: report.md.j2
tests/: test_aggregator.py  test_analyzers_pipeline.py  test_dropoff.py  test_ingestion.py  test_products.py  test_quality.py  test_reporter.py  test_segmentation.py  test_storage.py
